--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<h1>{{title}}</h1>
+<h1>{{title}} - holita</h1>
+<!-- <h1>{{title}}</h1>
 <app-counter></app-counter>
 <hr>
- <app-heroes-hero></app-heroes-hero>
+ <app-heroes-hero></app-heroes-hero> -->
+<app-dbz-main-page></app-dbz-main-page>
